# gaussdb-python-async

./: .flake8  .gitmodules  Dockerfile  MANIFEST.in  Makefile  README.rst  gs_ctl  pyproject.toml  setup.py  test_report.md
.github/: ISSUE_TEMPLATE.md  RELEASING.rst  release_log.py
.github/workflows/: install-krb5.sh  install-postgres.sh  python-publish.yml  release.yml  tests.yml
async_gaussdb/: __init__.py  _version.py  cluster.py  compat.py  connect_utils.py  connection.py  cursor.py  pool.py  prepared_stmt.py  serverversion.py  transaction.py  types.py  utils.py
async_gaussdb/_testbase/: __init__.py  fuzzer.py
async_gaussdb/exceptions/: __init__.py  _base.py
async_gaussdb/gaussdbproto/: README.rst  buffer.pyx  debug.h  debug.pxd  gaussdbproto.c  gaussdbproto.pyx  types.py  uuid.pyx
async_gaussdb/gaussdbproto/codecs/: __init__.pxd  bits.pyx  bytea.pyx  datetime.pyx  gaussdb_snapshot.pyx  geometry.pyx  hstore.pyx  json.pyx  jsonpath.pyx  network.pyx  numeric.pyx  text.pyx  uuid.pyx
async_gaussdb/protocol/: coreproto.pyx  encodings.pyx  gaussdbtypes.pxi  pgtypes.pxi  prepared_stmt.pyx  protocol.pxd  protocol.pyi  protocol.pyx  scram.pyx  settings.pxd  settings.pyx  sha256.pxd  sha256.pyx
async_gaussdb/protocol/codecs/: array.pyx  base.pxd  base.pyx  gaussdbproto.pyx  pgproto.pyx  range.pyx  record.pyx
async_gaussdb/protocol/record/: recordobj.c
asyncpg/protocol/: coreproto.pxd  coreproto.pyx  prepared_stmt.pyx  protocol.pyx
asyncpg/protocol/codecs/: pgproto.pyx
docs/: Makefile  conf.py  faq.rst  index.rst  installation.rst  usage.rst
docs/api/: index.rst
examples/: demo.py  ssl_demo.py
tests/: test__environment.py  test__sourcecode.py  test_adversity.py  test_cache_invalidation.py  test_cancellation.py  test_codecs.py  test_connect.py  test_copy.py  test_cursor.py  test_exceptions.py  test_execute.py  test_introspection.py  test_listeners.py  test_logging.py  test_pool.py  test_prepare.py  test_record.py  test_test.py  test_timeout.py  test_transaction.py  test_types.py  test_utils.py
tests/certs/: gen.py
tools/: generate_exceptions.py  generate_type_map.py
