[project]
name = "async_gaussdb"
description = "An asyncio GaussDB driver"
requires-python = '>=3.8.0'
readme = "README.rst"
license = {text = "Apache-2.0"}
dynamic = ["version"]
keywords = [
    "database",
    "gaussdb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    'async_timeout>=4.0.3; python_version < "3.11.0"',
]

[project.urls]
github = "https://github.com/HuaweiCloudDeveloper/gaussdb-python-async"

[project.optional-dependencies]
gssauth = [
    'gssapi; platform_system != "Windows"',
    'sspilib; platform_system == "Windows"',
]
docs = [
    'Sphinx~=8.1.3',
    'sphinx_rtd_theme>=1.2.2',
]

[build-system]
requires = [
    "setuptools>=60",
    "wheel",
    "Cython(>=0.29.24,<4.0.0)"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["async_gaussdb", "async_gaussdb.*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

[tool.mypy]
exclude = [
    "^.eggs",
    "^.github",
    "^.vscode",
    "^build",
    "^dist",
    "^docs",
    "^tests",
]
incremental = true
strict = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "async_gaussdb._testbase",
    "async_gaussdb._testbase.*",
    "async_gaussdb.cluster",
    "async_gaussdb.connect_utils",
    "async_gaussdb.connection",
    "async_gaussdb.connresource",
    "async_gaussdb.cursor",
    "async_gaussdb.exceptions",
    "async_gaussdb.exceptions.*",
    "async_gaussdb.pool",
    "async_gaussdb.prepared_stmt",
    "async_gaussdb.transaction",
    "async_gaussdb.utils",
]
ignore_errors = true